--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
 
     <button
       type="button"
-      (click)="login()"
+      (click)="onLogin()"
       class="mt-4 px-4 py-2 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75"
     >
       Login
